--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
-    "jsonwebtoken": "^9.0.2",
+    "crypto-js": "^4.2.0",
     "jwt-decode": "^4.0.0",
     "jwt-js-decode": "^1.9.0",
     "react": "^18.3.1",
